--- a/css/estructura1.css
+++ b/css/estructura1.css
@@ -46,52 +46,99 @@ body {
  }
 
 
- .main {
-	width:90%;
-	max-width:1000px;
-	margin:20px auto;
+ * {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
 }
- 
-.slides {
-	width:100%;
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
 }
- 
-.slides img {
-	width:100%;
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
 }
- 
-.slidesjs-pagination {
-	background:#53e0e8;
-	list-style:none;
-	overflow:hidden;
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
 }
- 
-.slidesjs-pagination li {
-	float:left;
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
 }
- 
-.slidesjs-pagination li a {
-	display:block;
-	padding:10px 20px;
-	color:#fff;
-	text-decoration:none;
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
 }
- 
-.slidesjs-pagination li a:hover {
-	background:#000;
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
 }
- 
-.slides .active {
-	background:#000;
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
 }
- 
-.slidesjs-navigation{
-	background:#dd16a5;
-	color:#fff;
-	text-decoration:none;
-	display:inline-block;
-	padding:13.5px 20px;
-	float:right;
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
 }
 
 .caja1 {
@@ -103,7 +150,6 @@ body {
 	margin: 100px auto;
 	box-shadow: 10px 10px 0px 0px ;
 }
-
 .caja2 img{
 	width: 500px;
 	height: 200px;
